--- a/_dev/ejs/index.ejs
+++ b/_dev/ejs/index.ejs
@@ -25,116 +25,116 @@
   <div class="container">
 
     <div class="aside_content">
-    <div class="course">
-      <p class="pc_view"><img src="./assets/images/lnav_img_01.png" alt=""></p>
-      <p class="sp_view"><img src="./assets/images/sp_lnav_img_01.png" alt=""></p>
-      <div class="link-btn">
-        <a href="#">
-          今すぐモニターになる♪
-        </a>
-      </div>
-    </div>
-    <p class="bnr"><a href="#"><img src="./assets/images/lnav_img_02.png" alt="まずはお試し単品購入"></a></p>
+        <div class="course">
+          <p class="pc_view"><img src="./assets/images/lnav_img_01.png" alt=""></p>
+          <p class="sp_view"><img src="./assets/images/sp_lnav_img_01.png" alt=""></p>
+          <div class="link-btn">
+            <a href="#">
+              初回限定価格で始める！
+            </a>
+          </div>
+        </div>
     </div>
 
     <div class="main_content">
 
       <section>
-        <h3>人気モデルやセレブでも話題の『Beautyフォルスコリー235』</h3>
-        <p>モデルや海外セレブの間でも話題の『Beautyフォルスコリー235』。流行に敏感なセレブやモデルの間で、手軽でおいしくできるダイエットとして、超話題になっているようです。</p>
+        <h3>GIRL'S BLOGGER STYLE 2016で紹介された今注目の酵素ドリンク！</h3>
         <p class="image"><img src="./assets/images/main_img_01.jpg" alt=""></p>
-        <p>ミランダ・カーをはじめとした海外セレブが実践しているダイエット法として海外セレブ系の人気雑誌「GLITTER」8月号に掲載されています。</p>
+        <p>大人気「CUTE MEシリーズ」の酵素ドリンクとして美容・流行に敏感な女子たちの間で話題のクレンジング酵素０。GIRL'S BLOGGER STYLE 2016では、姉ageha専属モデルでカリスマブロガーのゆんころがプロデューサーとして「おいしい」と自信を持ってすすめていました。</p>
+        <div class="link">
+          <a href="#">注目の酵素ドリンク♡お得にお試しできます</a>
+        </div>
+      </section>
+
+      <section>
+        <h3>短期集中で定番の酵素ダイエット！1日にどのくらい必要？</h3>
+        <p>不足すると痩せにくい身体になってしまう「酵素」。痩せにくい体質によってどんどん脂肪が増えていきます。そうなると身体のシルエットも崩れて、運動してもなかなか元に戻せません。<br>「ジムに通っても全然実感しない！」「間食してないのに太る」「ヤセても、すぐに元通り！」「食生活を乱すと体がどんより」という人は酵素不足が原因かも。</p>
         <p class="image"><img src="./assets/images/main_img_02.jpg" alt=""></p>
-        <p>伊東亜利沙さんや森下まいさんなど、人気モデルもフォルスコリーを愛飲しています！ブログで話題となり、美容や流行に敏感な人たちの間で人気急上昇中なんです。</p>
-        <div class="link">
-          <a href="#">セレブも注目のフォルスコリー♡とりあえず試したい♡</a>
-        </div>
-      </section>
-
-      <section>
-        <h3>我慢なし♡簡単にラクして痩せられる</h3>
-        <h4>食べたいものを我慢しない！運動もしない！時間がなくても大丈夫だから、続けられます！</h4>
-        <p>『Beautyフォルスコリー235』がここまで流行っているのは、ズバリ「ラクしてメリハリボディに！」なれること。我慢したり、面倒なカロリー計算、運動があるとどうしても続かないのがダイエット。栄養もバッチリで安心して続けられます。</p>
+        <h4>本当に必要な１日分の酵素量はなんと生野菜を350g！</h4>
+        <p>では、どのくらいの野菜を食事摂らなければならないのか。野菜は加熱調理してしまうと“酵素の力”がなくなってしまうので、常に生で食べ続けなければいけません…。生野菜をこれだけ毎日食べる…。これは続かないですよね。</p>
         <p class="image"><img src="./assets/images/main_img_03.jpg" alt=""></p>
-        <h3 class="mb10">今までのスムージーとは、ここが違う！４つのポイント</h3>
-        <h4>POINT１　235種類の酵素を配合！</h4>
-        <p>酵素は新陳代謝に関わる成分です。これが減少してしまうと痩せにくい体に！『Beautyフォルスコリー235』は実績のある「野菜」「果物」「植物」「穀物」の酵素がたっぷり！栄養分も補えます。</p>
-        <h4>POINT２　「フォルスコリ」で甘いものも我慢しなくて大丈夫！</h4>
-        <p>糖分の吸収を制限するシソ科の植物「フォルスコリ」で、ダイエットの無理なストレスからあなたを解放してくれます。</p>
+        <h4>続けられる酵素ダイエット。たった２週間で97%が満足と答えた！クレンジング酵素０</h4>
+        <p>生野菜で摂るのは難しい。だから、すぐに実感できる「クレンジング酵素０」飲みやすいから挫折しないダイエットです。</p>
         <p class="image"><img src="./assets/images/main_img_04.jpg" alt=""></p>
-        <h4>POINT3　コラーゲン・プラセンタの美容成分も配合</h4>
-        <p>美肌に欠かせない「コラーゲン」。コラーゲンの増加を促進してくれる「プラセンタ」で、もちもちのお肌に。</p>
-        <h4>POINT4　「プエラリア」でバストアップ！</h4>
-        <p>女性ホルモンの分泌を促進する効果があると注目されている「プエラリア」。単にやせるだけでなく、お肌が綺麗に、バストアップもできてメリハリボディを目指せます。</p>
-        <p class="image"><img src="./assets/images/main_img_05.jpg" alt=""></p>
         <div class="link">
-          <a href="#">健康的なメリハリボディになりたい！</a>
+          <a href="#">97%が満足の酵素ドリンク♡今ならお得な100円コースも</a>
         </div>
       </section>
 
       <section>
-        <h3>苦味なしの柑橘系の爽やかな香り！一杯あたり17円でできます。</h3>
-        <p>グリーンスムージにありがちな「カロリー」「味」「お金」の心配。『Beautyフォルスコリー235』はそんな心配をすべて解決してくれます。</p>
+        <h3>64種類の野菜を30倍濃縮しました</h3>
+        <p>クレンジング酵素０は14種類のフルーツを含む64種類の野草発酵酵素が含まれています。野草酵素とは、「山に自生するエネルギーの高い野草や野菜や果物、キノコ、海藻」などのことです。たくさんの自然の恵みを本場中国の「陶製かめ製法」でしっかり熟成して、体の内側からキレイにしてスッキリを実感♡</p>
+        <p class="image"><img src="./assets/images/main_img_05.jpg" alt=""></p>
+        <h4>ダイエットの効率をアップ♡新成分「白金ナノコロイド」</h4>
+        <p>クレンジング酵素０の特徴の一つが東京大学で発見された「白金ナノコロイド」。運動した際にエネルギー消費を向上する働きがあります。運動をしながら白金ナノコロイドが含まれたドリンクを飲むと、スッキリを、いち早く実感できます！</p>
+        <p class="image"><img src="./assets/images/main_img_06.jpg" alt=""></p>
+        <div class="link">
+          <a href="#">２週間で驚きの実感！美味しく飲めるから続けられる♡</a>
+        </div>
+      </section>
+
+      <section>
+        <h3>注目される理由！ココがスゴい♡クレンジング酵素0</h3>
+        <h4>飲みやすくておいしいから続けられる♡</h4>
+        <p>グレープ味でとても飲みやすい酵素。ブドウ種子ポリフェノールがが酵素が持つ「苦味や酸味」をなくして、ほんのりとまろやまかな甘みを出してくれます。</p>
+        <h4 class="mb0">豊富な６４種類の野草発酵酵素</h4>
+        <p>酵素不足を解消してすっきりキレイに！</p>
+        <p class="image"><img src="./assets/images/main_img_07.jpg" alt=""></p>
+        <h4>コラーゲンに働きかける高級食材「ツバメの巣」</h4>
+        <p>海外ではパーフェクトフートと呼ばれモデル業界で今最も注目されている高級美容成分<br>その美容効果はローヤルゼリーの約200倍！！</p>
+        <p>ツバメの巣はクレンジング酵素０に含まれている「ヒアルロン酸」と「コラーゲン」とコラボして美容に相乗効果をもたらします。</p>
+        <p class="image"><img src="./assets/images/main_img_08.jpg" alt=""></p>
+      </section>
+
+      <section>
+        <h4>それだけじゃない！たっぷり美容成分が配合！</h4>
         <ul>
           <li>
-            <p class="image"><img src="./assets/images/main_img_06_01.jpg" alt=""></p>
+            <p class="image"><img src="./assets/images/main_img_09_01.jpg" alt=""></p>
             <p class="text">
-              <strong>まずはプレーンで♪</strong>
-              青汁なのに美味しくて飲みやすいうえ、栄養もたっぷりだから忙しい時などはこのままで十分楽しめます！サッと簡単に飲めるので朝食の代わりにするのもおススメ！
+              ハリのある毎日に<strong>ヒアルロン酸</strong>
             </p>
           </li>
           <li>
-            <p class="image"><img src="./assets/images/main_img_06_02.jpg" alt=""></p>
+            <p class="image"><img src="./assets/images/main_img_09_02.jpg" alt=""></p>
             <p class="text">
-              <strong>ヨーグルトと！</strong>
-              スムージーの甘みとヨーグルトの酸味が絶妙にマッチ！デザート感覚でおいしく食べられます！忙しい朝は特にオススメ！
+              若々しい美容に<strong>コラーゲン</strong>
             </p>
           </li>
           <li>
-            <p class="image"><img src="./assets/images/main_img_06_03.jpg" alt=""></p>
+            <p class="image"><img src="./assets/images/main_img_09_03.jpg" alt=""></p>
             <p class="text">
-              <strong>牛乳・豆乳と一緒に♪</strong>
-              スムージーがよりクリーミーになった優しい味わい！小腹がすいた時や夜食代わりなんかにもピッタリ♪
+              健康的な美容づくりに<strong>馬プラセンタ</strong>
             </p>
           </li>
         </ul>
       </section>
 
       <section>
-        <p class="strong">実際に試した結果…（五位渕のぞみさん（30））</p>
-        <p>「Beautyフォルスコリー235」を約１ヶ月、試したところ嬉しい結果！！</p>
-        <p class="image"><img src="./assets/images/main_img_07.jpg" alt=""></p>
-        <p>タンブラーに入れて会社にも持ち運び、置き換えダイエットを実践したそうです。</p>
-        <p class="image"><img src="./assets/images/main_img_08.jpg" alt=""></p>
-        <p class="strong">ウエスト4.8cmダウン！</p>
-        <p>見た目だけでもスッキリとしたのがわかります！ お腹ほっそり、ウエスト4.8センチダウン</p>
-        <p class="image"><img src="./assets/images/main_img_09.jpg" alt=""></p>
-        <p class="strong">体重なんと3.8kgダウン！</p>
-        <p>結果がなかなか出にくい太ももは0.7センチ！バストは0.8センチアップ！</p>
+        <h4 class="mb0">分包タイプで持ち運びに便利</h4>
+        <p>瓶タイプはもう古い！個別包装なので衛生的に持ち歩けます。会社に、友達との食事に、彼氏とのデートに。見た目のデザインもこだわっているので、雰囲気のいいレストランの食前にも使えます。</p>
+        <p class="image"><img src="./assets/images/main_img_10.jpg" alt=""></p>
         <div class="link">
-          <a href="#">健康的なメリハリボディはすぐそこに！</a>
+          <a href="#">２週間で驚きの実感！美味しく飲めるから続けられる♡</a>
         </div>
       </section>
 
-      <section class="element_list">
-        <h3>Beautyフォルスコリー235 -フォトケミカル入り-【全成分表示】</h3>
-        <dl>
-          <p>商品名：Beautyフォルスコリー235 -フォトケミカル入り-</p>
-        </dl>
-        <dl>
-          <p>内容量：180g</p>
-        </dl>
-        <dl>
-          <p>含有成分：ブドウ糖、テキスト、テキスト、テキスト、テキスト、テキスト、テキスト、テキスト、テキスト、テキスト、テキスト、テキスト、テキスト、テキスト、テキスト、テキスト</p>
-        </dl>
-        <dl>
-          <p>販売者：株式会社リーフ</p>
-        </dl>
+      <section>
+        <h3>おすすめアレンジレシピ</h3>
+        <h4 class="mb10">クレンジング酵素０をスムージーにトッピング</h4>
+        <p class="image"><img src="./assets/images/main_img_11.jpg" alt=""></p>
+        <p>クレンジング酵素０（２包）／ブルーベリー（冷凍OK）50g／キウイフルーツ２分の１／プレーンヨーグルト50g／はちみつお好みで</p>
+        <h4 class="mb10">クレンジング酵素０をヨーグルトにトッピング</h4>
+        <p class="image"><img src="./assets/images/main_img_12.jpg" alt=""></p>
+        <p>クレンジング酵素０（２包）／いちご３粒／ヨーグルト150g／はちみつ小さじ２</p>
+        <h4 class="mb10">一番のオススメは、炭酸で割るシャンパン風の飲み方</h4>
+        <p class="image"><img src="./assets/images/main_img_13.jpg" alt=""></p>
       </section>
 
       <section>
-        <h3>30日間全額返金保証！</h3>
-        <p>定期モニターコースを申込みされた方の初回購入分１箱に限り返金保証対象となります。<br>初回の商品ご到着から30日以内に、商品にご不満がございました場合ご返金します。</p>
+        <h3>今なら初回限定100円コースもあります。</h3>
+        <p>今なら、初回のみ10日分10包入り100円（税込）のコースがあります。<br>さらに２回目以降が36％OFFの5,378円（税込）でお届け。２個セットコースだと48%OFFに！<br>お得にクレンジング酵素０が試せます。</p>
       </section>
 
     </div><!-- /.main_content -->
