--- a/htdocs/assets/css/style.css
+++ b/htdocs/assets/css/style.css
@@ -237,6 +237,7 @@ img {
   margin: -30% auto 8px;
   position: relative;
   z-index: 10;
+  background: #fff;
 }
 
 .container .aside_content .course .link-btn a {
@@ -246,33 +247,34 @@ img {
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff86ac', endColorstr='#ff3f92');
   background-color: #ff86ac;
   color: #fff;
-  font-size: 20px;
+  font-size: 17px;
   text-align: center;
-  padding: 10px 0;
+  padding: 8px 0;
 }
 
 .container .aside_content .course .link-btn a:hover {
   text-decoration: none;
+  opacity: .8;
 }
 
 @media screen and (max-width: 1200px) {
   .main_area {
     width: 100%;
     height: auto;
-    background: #e4ffe1;
+    background: #ffa1a7;
     margin-bottom: 15px;
   }
   .main_area .inner {
-    width: 60%;
+    width: 50%;
     height: auto;
     margin: 0 auto;
-    padding: 30px 0 30px 40%;
-    background: url(../images/main_img_00.png) no-repeat left center;
+    padding: 30px 0 30px 50%;
+    background: url(../images/main_img_00.jpg) no-repeat left center;
     background-size: contain;
-    color: #00702d;
+    color: #000000;
   }
   .main_area .inner span.border {
-    border: 1px solid #00702d;
+    border: 1px solid #000000;
     padding: 3px;
   }
   .main_area .inner span.block {
@@ -297,19 +299,6 @@ img {
 }
 
 @media screen and (max-width: 960px) {
-  .main_area .inner {
-    width: 40%;
-    padding: 30px 0 30px 60%;
-  }
-}
-
-@media screen and (max-width: 768px) {
-  .pc_view {
-    display: none !important;
-  }
-  .sp_view {
-    display: block !important;
-  }
   .main_area {
     height: auto;
     padding: 30px 3%;
@@ -322,11 +311,28 @@ img {
     padding: 0;
     background: none;
   }
-  .main_area .inner h2 {
+  .main_area h2 {
     font-size: 18px;
   }
-  .main_area .inner p {
+  .main_area p {
     font-size: 12px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .pc_view {
+    display: none !important;
+  }
+  .sp_view {
+    display: block !important;
+  }
+  .c_hdr_content {
+    width: 104px;
+    margin: 0 auto;
+  }
+  .c_hdr_content img {
+    width: 100%;
+    height: auto;
   }
   .container {
     overflow: hidden;
@@ -418,20 +424,23 @@ img {
   .container .aside_content img {
     width: 100%;
   }
-  .container .aside_content .course {
-    border: 5px solid #006e1d;
-  }
   .container .aside_content .course .link-btn {
-    width: 94%;
-    margin: 0 auto 8px;
+    width: 44%;
+    margin: 0;
+    position: absolute;
+    top: 73.5%;
+    left: 50%;
   }
   .container .aside_content .course .link-btn a {
     display: block;
-    background: #ff4c00;
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0.05, #ff86ac), color-stop(1, #ff3f92));
+    background: -moz-linear-gradient(center top, #ff86ac 5%, #ff3f92 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff86ac', endColorstr='#ff3f92');
+    background-color: #ff86ac;
     color: #fff;
-    font-size: 17px;
+    font-size: 11px;
     text-align: center;
-    padding: 10px 0;
+    padding: 1% 0;
   }
   .container .aside_content .course .link-btn a:hover {
     text-decoration: none;
