メールフォームスタイル調整

--- a/_dev/ejs/index.ejs
+++ b/_dev/ejs/index.ejs
@@ -29,7 +29,7 @@
           <p class="pc_view"><img src="./assets/images/lnav_img_01.png" alt=""></p>
           <p class="sp_view"><img src="./assets/images/sp_lnav_img_01.png" alt=""></p>
           <div class="link-btn">
-            <a href="#">
+            <a class="scroll" href="#lpshoppingcolumn">
               初回限定価格で始める！
             </a>
           </div>
