--- a/htdocs/assets/css/style.css
+++ b/htdocs/assets/css/style.css
@@ -1040,7 +1040,7 @@ select {
 /* フォーム
 ----------------------------------------------- */
 #lpshoppingcolumn {
-  width: 90%;
+  width: 1000px;
   margin: 30px auto;
   padding: 2%;
   font-size: 1em;
@@ -1619,6 +1619,9 @@ form .register-select select {
   }
   .container img {
     width: 100%;
+  }
+  #lpshoppingcolumn {
+    width: 90%;
   }
 }
 
