--- a/_dev/_src/css/style.scss
+++ b/_dev/_src/css/style.scss
@@ -838,7 +838,7 @@ font-weight: normal;
 /* フォーム
 ----------------------------------------------- */
 #lpshoppingcolumn {
-width: 90%;
+width: 1000px;
 margin: 30px auto;
 padding: 2%;
 font-size: 1em;
@@ -1456,6 +1456,10 @@ form .register-select select {
         img{
             width: 100%;
         }
+    }
+
+    #lpshoppingcolumn {
+      width: 90%;
     }
 
 }
