ざっくり実装

--- a/_dev/ejs/index.ejs
+++ b/_dev/ejs/index.ejs
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
 
-<% var title = "Beautyフォルスコリー235"; %>
+<% var title = "meemo"; %>
 <% var keywords = ""; %>
 <% var description = ""; %>
 <% include parts/_head %>
@@ -28,11 +28,6 @@
     <div class="course">
       <p class="pc_view"><img src="./assets/images/lnav_img_01.png" alt=""></p>
       <p class="sp_view"><img src="./assets/images/sp_lnav_img_01.png" alt=""></p>
-      <div class="link-btn">
-        <a href="#">
-          今すぐモニターになる♪
-        </a>
-      </div>
     </div>
     <p class="bnr"><a href="#"><img src="./assets/images/lnav_img_02.png" alt="まずはお試し単品購入"></a></p>
     </div>
@@ -42,9 +37,9 @@
       <section>
         <h3>人気モデルやセレブでも話題の『Beautyフォルスコリー235』</h3>
         <p>モデルや海外セレブの間でも話題の『Beautyフォルスコリー235』。流行に敏感なセレブやモデルの間で、手軽でおいしくできるダイエットとして、超話題になっているようです。</p>
-        <p class="image"><img src="./assets/images/main_img_01.png" alt=""></p>
+        <p class="image"><img src="./assets/images/main_img_01.jpg" alt=""></p>
         <p>ミランダ・カーをはじめとした海外セレブが実践しているダイエット法として海外セレブ系の人気雑誌「GLITTER」8月号に掲載されています。</p>
-        <p class="image"><img src="./assets/images/main_img_02.png" alt=""></p>
+        <p class="image"><img src="./assets/images/main_img_02.jpg" alt=""></p>
         <p>伊東亜利沙さんや森下まいさんなど、人気モデルもフォルスコリーを愛飲しています！ブログで話題となり、美容や流行に敏感な人たちの間で人気急上昇中なんです。</p>
         <div class="link">
           <a href="#">セレブも注目のフォルスコリー♡とりあえず試したい♡</a>
@@ -55,18 +50,18 @@
         <h3>我慢なし♡簡単にラクして痩せられる</h3>
         <h4>食べたいものを我慢しない！運動もしない！時間がなくても大丈夫だから、続けられます！</h4>
         <p>『Beautyフォルスコリー235』がここまで流行っているのは、ズバリ「ラクしてメリハリボディに！」なれること。我慢したり、面倒なカロリー計算、運動があるとどうしても続かないのがダイエット。栄養もバッチリで安心して続けられます。</p>
-        <p class="image"><img src="./assets/images/main_img_03.png" alt=""></p>
+        <p class="image"><img src="./assets/images/main_img_03.jpg" alt=""></p>
         <h3 class="mb10">今までのスムージーとは、ここが違う！４つのポイント</h3>
         <h4>POINT１　235種類の酵素を配合！</h4>
         <p>酵素は新陳代謝に関わる成分です。これが減少してしまうと痩せにくい体に！『Beautyフォルスコリー235』は実績のある「野菜」「果物」「植物」「穀物」の酵素がたっぷり！栄養分も補えます。</p>
         <h4>POINT２　「フォルスコリ」で甘いものも我慢しなくて大丈夫！</h4>
         <p>糖分の吸収を制限するシソ科の植物「フォルスコリ」で、ダイエットの無理なストレスからあなたを解放してくれます。</p>
-        <p class="image"><img src="./assets/images/main_img_04.png" alt=""></p>
+        <p class="image"><img src="./assets/images/main_img_04.jpg" alt=""></p>
         <h4>POINT3　コラーゲン・プラセンタの美容成分も配合</h4>
         <p>美肌に欠かせない「コラーゲン」。コラーゲンの増加を促進してくれる「プラセンタ」で、もちもちのお肌に。</p>
         <h4>POINT4　「プエラリア」でバストアップ！</h4>
         <p>女性ホルモンの分泌を促進する効果があると注目されている「プエラリア」。単にやせるだけでなく、お肌が綺麗に、バストアップもできてメリハリボディを目指せます。</p>
-        <p class="image"><img src="./assets/images/main_img_05.png" alt=""></p>
+        <p class="image"><img src="./assets/images/main_img_05.jpg" alt=""></p>
         <div class="link">
           <a href="#">健康的なメリハリボディになりたい！</a>
         </div>
@@ -77,21 +72,21 @@
         <p>グリーンスムージにありがちな「カロリー」「味」「お金」の心配。『Beautyフォルスコリー235』はそんな心配をすべて解決してくれます。</p>
         <ul>
           <li>
-            <p class="image"><img src="./assets/images/main_img_06_01.png" alt=""></p>
+            <p class="image"><img src="./assets/images/main_img_06_01.jpg" alt=""></p>
             <p class="text">
               <strong>まずはプレーンで♪</strong>
               青汁なのに美味しくて飲みやすいうえ、栄養もたっぷりだから忙しい時などはこのままで十分楽しめます！サッと簡単に飲めるので朝食の代わりにするのもおススメ！
             </p>
           </li>
           <li>
-            <p class="image"><img src="./assets/images/main_img_06_02.png" alt=""></p>
+            <p class="image"><img src="./assets/images/main_img_06_02.jpg" alt=""></p>
             <p class="text">
               <strong>ヨーグルトと！</strong>
               スムージーの甘みとヨーグルトの酸味が絶妙にマッチ！デザート感覚でおいしく食べられます！忙しい朝は特にオススメ！
             </p>
           </li>
           <li>
-            <p class="image"><img src="./assets/images/main_img_06_03.png" alt=""></p>
+            <p class="image"><img src="./assets/images/main_img_06_03.jpg" alt=""></p>
             <p class="text">
               <strong>牛乳・豆乳と一緒に♪</strong>
               スムージーがよりクリーミーになった優しい味わい！小腹がすいた時や夜食代わりなんかにもピッタリ♪
@@ -103,12 +98,12 @@
       <section>
         <p class="strong">実際に試した結果…（五位渕のぞみさん（30））</p>
         <p>「Beautyフォルスコリー235」を約１ヶ月、試したところ嬉しい結果！！</p>
-        <p class="image"><img src="./assets/images/main_img_07.png" alt=""></p>
+        <p class="image"><img src="./assets/images/main_img_07.jpg" alt=""></p>
         <p>タンブラーに入れて会社にも持ち運び、置き換えダイエットを実践したそうです。</p>
-        <p class="image"><img src="./assets/images/main_img_08.png" alt=""></p>
+        <p class="image"><img src="./assets/images/main_img_08.jpg" alt=""></p>
         <p class="strong">ウエスト4.8cmダウン！</p>
         <p>見た目だけでもスッキリとしたのがわかります！ お腹ほっそり、ウエスト4.8センチダウン</p>
-        <p class="image"><img src="./assets/images/main_img_09.png" alt=""></p>
+        <p class="image"><img src="./assets/images/main_img_09.jpg" alt=""></p>
         <p class="strong">体重なんと3.8kgダウン！</p>
         <p>結果がなかなか出にくい太ももは0.7センチ！バストは0.8センチアップ！</p>
         <div class="link">
@@ -140,8 +135,6 @@
     </div><!-- /.main_content -->
 
   </div><!-- /.container -->
-
-  <% include parts/_mailForm %>
 
 </div><!-- /.wrapper -->
 
