--- a/_dev/ejs/parts/_header.ejs
+++ b/_dev/ejs/parts/_header.ejs
@@ -1,3 +1,3 @@
 <header class="c_hdr_content">
-<p class="logo"><img src="./assets/images/hdr_logo.png" alt=""></p>
+<p class="logo"><img src="./assets/images/hdr_logo.png" alt="meemo"></p>
 </header>
