--- a/_dev/ejs/index.ejs
+++ b/_dev/ejs/index.ejs
@@ -16,9 +16,9 @@
 
   <div class="main_area">
     <div class="inner">
-      <span class="border">今なら限定キャンペーン中！</span>
-      <h2>手間いらずのダイエット♡<br>『Beautyフォルスコリー235』ラクしてメリハリボディに！</h2>
-      <p>痩せやすい体にする為の燃焼サポート成分「フォルスコリー」や、<span class="block">美容成分の「コラーゲン」「プラセンタ」、</span><span class="block">さらに女性ホルモンの分泌を促進する「プエラリア」を配合！ただ痩せるのではなく、</span><span class="block">魅力的なメリハリボディにしてくれるのです♡</span></p>
+      <span class="border">限定キャンペーン実施中！</span>
+      <h2>リピート率95.4%！かんたん無理なくバストアップ♡<br>内側と外側から美ボディを目指す感動のゼリー！</h2>
+      <p>イソフラボンが含まれた大豆の摂取や、念入りな体のお手入れ、<span class="block">大胸筋を鍛えるエクササイズなど、努力がなかなか見えづらいバストアップ。</span><span class="block">業界最前線のトリプルプエラリア配合のバストアップゼリーのmeemoなら、</span><span class="block">内側と外側からカンタンに美ボディを作れます。</span></p>
     </div>
   </div>
 
@@ -26,110 +26,121 @@
 
     <div class="aside_content">
     <div class="course">
-      <p class="pc_view"><img src="./assets/images/lnav_img_01.png" alt=""></p>
-      <p class="sp_view"><img src="./assets/images/sp_lnav_img_01.png" alt=""></p>
+      <p class="pc_view"><img src="./assets/images/lnav_img_01.png" alt="毎月300名限定 ラクラクコース"></p>
+      <p class="sp_view"><a href="http://ad.resultplus.jp/OGN904/" target="_blank"><img src="./assets/images/sp_lnav_img_01.png" alt="ラクラクコースで申し込む！"></a></p>
     </div>
-    <p class="bnr"><a href="#"><img src="./assets/images/lnav_img_02.png" alt="まずはお試し単品購入"></a></p>
+    <p class="bnr pc_view"><a href="http://ad.resultplus.jp/OGN904/" target="_blank"><img src="./assets/images/lnav_img_02.png" alt="ラクラクコースで申し込む！"></a></p>
     </div>
 
     <div class="main_content">
 
       <section>
-        <h3>人気モデルやセレブでも話題の『Beautyフォルスコリー235』</h3>
-        <p>モデルや海外セレブの間でも話題の『Beautyフォルスコリー235』。流行に敏感なセレブやモデルの間で、手軽でおいしくできるダイエットとして、超話題になっているようです。</p>
+        <h3>努力がなかなか実らない！グラドルみたいなボディ諦めてませんか？</h3>
         <p class="image"><img src="./assets/images/main_img_01.jpg" alt=""></p>
-        <p>ミランダ・カーをはじめとした海外セレブが実践しているダイエット法として海外セレブ系の人気雑誌「GLITTER」8月号に掲載されています。</p>
+        <h4>男性のシビアな目が気になるけど、なかなか成果が出ない…。</h4>
+        <p>「ちっちゃくてかわいいね」「見た目は関係ないから」なんて言葉の裏に隠された意味も気になりますよね。コンプレックスは解消したいけど、大変な努力の割に目に見える成果ってなかなか出にくいです。努力するのに疲れてしまう。もしくは最初からあきらめていませんか。</p>
         <p class="image"><img src="./assets/images/main_img_02.jpg" alt=""></p>
-        <p>伊東亜利沙さんや森下まいさんなど、人気モデルもフォルスコリーを愛飲しています！ブログで話題となり、美容や流行に敏感な人たちの間で人気急上昇中なんです。</p>
+        <h4>かんたんに自分を変えられる感動のバストアップゼリー。95.4%のリピート率です♡</h4>
+        <p>美容家・カリスマ整体師の朝井麗華×美的ラボがタッグを組んで完成させた「きらきらキレイゼリー」。内側から変えていくことにこだわり、「身体のリズムに合わせて」「自信たっぷりの上向きボディを目指し」「天然植物由来原料成分を使用」した感動ゼリーです。</p>
+        <p>口コミから多くの有名雑誌で紹介されています</p>
+        <p class="image"><img src="./assets/images/main_img_03.jpg" alt=""></p>
         <div class="link">
-          <a href="#">セレブも注目のフォルスコリー♡とりあえず試したい♡</a>
+          <a href="#">かんたんにバストアップ！ラクラクコースならお得に試せる♡</a>
         </div>
       </section>
 
       <section>
-        <h3>我慢なし♡簡単にラクして痩せられる</h3>
-        <h4>食べたいものを我慢しない！運動もしない！時間がなくても大丈夫だから、続けられます！</h4>
-        <p>『Beautyフォルスコリー235』がここまで流行っているのは、ズバリ「ラクしてメリハリボディに！」なれること。我慢したり、面倒なカロリー計算、運動があるとどうしても続かないのがダイエット。栄養もバッチリで安心して続けられます。</p>
-        <p class="image"><img src="./assets/images/main_img_03.jpg" alt=""></p>
-        <h3 class="mb10">今までのスムージーとは、ここが違う！４つのポイント</h3>
-        <h4>POINT１　235種類の酵素を配合！</h4>
-        <p>酵素は新陳代謝に関わる成分です。これが減少してしまうと痩せにくい体に！『Beautyフォルスコリー235』は実績のある「野菜」「果物」「植物」「穀物」の酵素がたっぷり！栄養分も補えます。</p>
-        <h4>POINT２　「フォルスコリ」で甘いものも我慢しなくて大丈夫！</h4>
-        <p>糖分の吸収を制限するシソ科の植物「フォルスコリ」で、ダイエットの無理なストレスからあなたを解放してくれます。</p>
+        <h3>美しくする成分だけで18種類！meemoで今日からあなたもモテ女子に♡</h3>
+        <h4>「プエラリア」と「ワイルドヤム」で大事なところは魅力アップ</h4>
+        <p>プエラリアは大豆の40倍ものイソフラボンを配合しています。meemoは高品質にこだわりぬき「天然植物性エストロゲン」が豊富に含まれている「プエラリア・ミリフィカ」を厳選し使用しています。さらにプエラリアに変わる成分として近年注目を浴び始めた「ワイルドヤム」プエラリアの数十倍もの効果があると言われています。meemoにはこの最新成分も使用されてます。</p>
+        <h4>その他にも主役級の美容成分、内側からキレイにする健康成分がたっぷり♡</h4>
+        <p>「プラセンタ」「コラーゲン」「セラミド」「ヒアルロン酸」など誰もが聞いたことがある美容成分がたっぷり。見た目の美しさを追求しつつ、「大豆イソフラボン」や気分を落ち着かせる天然植物由来のハーブ「ブラックコホシュ」、ビタミン豊富なフルーツ「アグアヘ」など内側からもキレイにします。</p>
         <p class="image"><img src="./assets/images/main_img_04.jpg" alt=""></p>
-        <h4>POINT3　コラーゲン・プラセンタの美容成分も配合</h4>
-        <p>美肌に欠かせない「コラーゲン」。コラーゲンの増加を促進してくれる「プラセンタ」で、もちもちのお肌に。</p>
-        <h4>POINT4　「プエラリア」でバストアップ！</h4>
-        <p>女性ホルモンの分泌を促進する効果があると注目されている「プエラリア」。単にやせるだけでなく、お肌が綺麗に、バストアップもできてメリハリボディを目指せます。</p>
+        <p>さらに毎日使うものだから、美容効果が高い天然の厳選成分である「ザクロ」「白キクラゲ」「チェストツリー」「マキベリー＆アサイー」「高麗人参」「マカ」も使用しています。食事管理など徹底するとセクシーさが大幅にダウンしてしまうのですが、meemoは大事なところ魅力アップ、悩みはスッキリ解消できてしまいます♡</p>
         <p class="image"><img src="./assets/images/main_img_05.jpg" alt=""></p>
         <div class="link">
-          <a href="#">健康的なメリハリボディになりたい！</a>
+          <a href="#">健康的なメリハリボディに♡お得にお試し！</a>
         </div>
       </section>
 
       <section>
-        <h3>苦味なしの柑橘系の爽やかな香り！一杯あたり17円でできます。</h3>
-        <p>グリーンスムージにありがちな「カロリー」「味」「お金」の心配。『Beautyフォルスコリー235』はそんな心配をすべて解決してくれます。</p>
+        <h3>２種類のゼリーで、女性の「リズム」に合わせてピンポイントにサポート。</h3>
+        <p>meemoは２種類のゼリーが入っています。気分が明るい「きらきらキレイ期」、気分が落ち込みやすくなる「ゆっくりキレイ期」、リズムに合わせて使うことで、外の魅力と内側からの土台作りを効果的にすることで、女性らしい魅力アップ♡</p>
+        <p class="image"><img src="./assets/images/main_img_06.jpg" alt=""></p>
+        <h4>きらきらキレイ期は、理想の美ボディを目指す時！</h4>
+        <p>気分が明るく前向きで活動的な時期は体調もいいので、プエラリアに加えて３つのサポート成分（大豆イソフラボン、ブラックコホシュ、アグアヘ）で強力に魅力アップ！</p>
         <ul>
           <li>
-            <p class="image"><img src="./assets/images/main_img_06_01.jpg" alt=""></p>
+            <p class="image"><img src="./assets/images/main_img_07_01.jpg" alt=""></p>
             <p class="text">
-              <strong>まずはプレーンで♪</strong>
-              青汁なのに美味しくて飲みやすいうえ、栄養もたっぷりだから忙しい時などはこのままで十分楽しめます！サッと簡単に飲めるので朝食の代わりにするのもおススメ！
+              <strong>朝ごはんの前に</strong>
+              朝ごはんの前にぷるっと補給し、いつもと同じ一日を過ごします。
             </p>
           </li>
           <li>
-            <p class="image"><img src="./assets/images/main_img_06_02.jpg" alt=""></p>
+            <p class="image"><img src="./assets/images/main_img_07_02.jpg" alt=""></p>
             <p class="text">
-              <strong>ヨーグルトと！</strong>
-              スムージーの甘みとヨーグルトの酸味が絶妙にマッチ！デザート感覚でおいしく食べられます！忙しい朝は特にオススメ！
+              <strong>３時のおやつに</strong>
+              小腹も満たせちゃうので一石二鳥♡
             </p>
           </li>
           <li>
-            <p class="image"><img src="./assets/images/main_img_06_03.jpg" alt=""></p>
+            <p class="image"><img src="./assets/images/main_img_07_03.jpg" alt=""></p>
             <p class="text">
-              <strong>牛乳・豆乳と一緒に♪</strong>
-              スムージーがよりクリーミーになった優しい味わい！小腹がすいた時や夜食代わりなんかにもピッタリ♪
+              <strong>就寝前に</strong>
+              寝ている間に体の中からサポートします。
+            </p>
+          </li>
+        </ul>
+        <h4>ゆっくりキレイ期は、次の「きらきらキレイ」に向けての準備！</h4>
+        <p>体の不調を感じやすいナイーブなこの時期はいたわりを第一に！ワイルドヤムを中心に土台から整えます。</p>
+        <ul>
+          <li>
+            <p class="image"><img src="./assets/images/main_img_08_01.jpg" alt=""></p>
+            <p class="text">
+              <strong>食欲がない時の朝食に</strong>
+              アサイー味で手軽に摂取できます。
+            </p>
+          </li>
+          <li>
+            <p class="image"><img src="./assets/images/main_img_08_02.jpg" alt=""></p>
+            <p class="text">
+              <strong>痛みで食欲がない時に</strong>
+              お腹の鈍い痛みでランチをあまり食べられないときに
+            </p>
+          </li>
+          <li>
+            <p class="image"><img src="./assets/images/main_img_08_03.jpg" alt=""></p>
+            <p class="text">
+              <strong>お風呂上がりに</strong>
+              お風呂でしっかり身体を温めた後に
             </p>
           </li>
         </ul>
       </section>
 
       <section>
-        <p class="strong">実際に試した結果…（五位渕のぞみさん（30））</p>
-        <p>「Beautyフォルスコリー235」を約１ヶ月、試したところ嬉しい結果！！</p>
-        <p class="image"><img src="./assets/images/main_img_07.jpg" alt=""></p>
-        <p>タンブラーに入れて会社にも持ち運び、置き換えダイエットを実践したそうです。</p>
-        <p class="image"><img src="./assets/images/main_img_08.jpg" alt=""></p>
-        <p class="strong">ウエスト4.8cmダウン！</p>
-        <p>見た目だけでもスッキリとしたのがわかります！ お腹ほっそり、ウエスト4.8センチダウン</p>
+        <h3>身体も中身も綺麗に魅力的に！</h3>
+        <h4>セクシー度が増して、行きつけのショップ店員さんからも驚かれたんです。川内静江さん（32歳）</h4>
+        <p>meemoの先行モニターに申し込み、食べ始めてから１週間目、これといった実感はないものの、食べない時よりも翌朝の表情が明るくなったかもと感じられたため美容のためにもう少し食べ続けてみることにしました。すると２週間目を過ぎたころから明らかな変化があることに気が付いたんです。</p>
+        <p>お風呂上がりにカラダをチェックする時も、今までと違うなと感じました。セクシー度が増してる感じがする！この際だから思い切って下着も買いかえました。実際、行きつけのショップ店員さんからも驚かれたんです。まさかの変化に私自身驚きを隠せませんでした。新しい下着を新調し意気揚々で家へと帰ったのを覚えています。<br>その後も毎日meemoを食べ続けて、以前と比べるとグッと女らしくなりました！</p>
         <p class="image"><img src="./assets/images/main_img_09.jpg" alt=""></p>
-        <p class="strong">体重なんと3.8kgダウン！</p>
-        <p>結果がなかなか出にくい太ももは0.7センチ！バストは0.8センチアップ！</p>
-        <div class="link">
-          <a href="#">健康的なメリハリボディはすぐそこに！</a>
-        </div>
-      </section>
-
-      <section class="element_list">
-        <h3>Beautyフォルスコリー235 -フォトケミカル入り-【全成分表示】</h3>
-        <dl>
-          <p>商品名：Beautyフォルスコリー235 -フォトケミカル入り-</p>
-        </dl>
-        <dl>
-          <p>内容量：180g</p>
-        </dl>
-        <dl>
-          <p>含有成分：ブドウ糖、テキスト、テキスト、テキスト、テキスト、テキスト、テキスト、テキスト、テキスト、テキスト、テキスト、テキスト、テキスト、テキスト、テキスト、テキスト</p>
-        </dl>
-        <dl>
-          <p>販売者：株式会社リーフ</p>
-        </dl>
       </section>
 
       <section>
-        <h3>30日間全額返金保証！</h3>
-        <p>定期モニターコースを申込みされた方の初回購入分１箱に限り返金保証対象となります。<br>初回の商品ご到着から30日以内に、商品にご不満がございました場合ご返金します。</p>
+        <h3>毎月300名限定のラクラクコース！今なら６大特典がついています。</h3>
+        <ol>
+          <li>１，30日分実質無料</li>
+          <li>２，初回は約１万円お得！</li>
+          <li>３，２回目以降、ずっと送料無料！</li>
+          <li>４，この価格でたっぷり一ヶ月分</li>
+          <li>５，２回目以降、ずっと定価から29％OFF！</li>
+          <li>６，おっぱい番長、朝井麗華のオリジナルバストアップブックプレゼント</li>
+        </ol>
+        <p class="image"><img src="./assets/images/main_img_10.jpg" alt=""></p>
+        <div class="link">
+          <a href="#">こんなに簡単！期待に胸がどんどん膨らみます♡</a>
+        </div>
       </section>
 
     </div><!-- /.main_content -->
