--- a/_dev/_src/css/style.scss
+++ b/_dev/_src/css/style.scss
@@ -182,14 +182,22 @@ img{
 						display: block;
 					}
 				}
+
+        .image{
+          margin-bottom: 10px;
+        }
 			}
 		}
+
+    ol{
+      margin: 0 auto 20px;
+    }
 	}
 
 
 	.aside_content{
 		float: right;
-		width: 300px;
+		width: 30%;
         margin-right: 20px;
 
         img{
@@ -218,22 +226,23 @@ img{
     .main_area{
         width: 100%;
     	height: auto;
-    	background: #e4ffe1;
+      background: #e3fddb;
     	margin-bottom: 15px;
 
     	.inner{
-    		width: 60%;
-    		height: auto;
-    		margin: 0 auto;
-    		padding: 30px 0 30px 40%;
+        width: 100%;
+        height: auto;
+        margin: 0 auto;
+        padding: 30px 0 30px 380px;
+        box-sizing: border-box;
     		background: url(../images/main_img_00.jpg) no-repeat left center;
             background-size: contain;
-    		color: #00702d;
+        color: #fc7270;
 
     		span{
 
                 &.border{
-        			border: 1px solid #00702d;
+        			border: 1px solid #fc7270;
         			padding: 3px;
                 }
 
@@ -295,8 +304,9 @@ img{
 
     .main_area{
     	.inner{
-    		width: 40%;
-    		padding: 30px 0 30px 60%;
+    		width: 100%;
+    		padding: 30px 3%;
+        background: none;
     	}
     }
 }
@@ -431,6 +441,10 @@ img{
     				}
     			}
     		}
+
+        ol{
+    			margin: 0 auto 20px;
+    		}
     	}
 
 
@@ -446,7 +460,6 @@ img{
             }
 
     		.course{
-    			border: 5px solid #006e1d;
 
     			.link-btn{
     				width: 94%;
@@ -465,10 +478,6 @@ img{
     					}
     				}
     			}
-    		}
-
-    		.bnr{
-    			margin-top: 9px;
     		}
     	}
     }
